--- a/systemd-cgroup-gc.yaml
+++ b/systemd-cgroup-gc.yaml
@@ -4,7 +4,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: scriptsrc
+  name: systemd-cgroup-gc
 data:
   systemd-cgroup-gc: |
     #!/bin/bash
@@ -62,5 +62,5 @@ spec:
       volumes:
         - name: scriptsrc
           configMap:
-            name: scriptsrc
+            name: systemd-cgroup-gc
             defaultMode: 0755
