Request and limit based on the observed amount of resources.

--- a/systemd-cgroup-gc.yaml
+++ b/systemd-cgroup-gc.yaml
@@ -44,7 +44,11 @@ spec:
       containers:
         - resources:
             requests:
-              cpu: 0.1
+              cpu: 5m
+              memory: 500Ki
+            limits:
+              cpu: 5m
+              memory: 10Mi  # This crashes on startup with a 5Mi limit, but only uses about 320Ki after that.
           securityContext:
             privileged: true
           image: ubuntu:16.04
