--- a/systemd-cgroup-gc.yaml
+++ b/systemd-cgroup-gc.yaml
@@ -48,7 +48,7 @@ spec:
               memory: 500Ki
             limits:
               cpu: 5m
-              memory: 10Mi  # This crashes on startup with a 5Mi limit, but only uses about 320Ki after that.
+              memory: 50Mi  # This crashes on startup with a 5Mi limit, but only uses about 320Ki after that.
           securityContext:
             privileged: true
           image: ubuntu:16.04
@@ -63,8 +63,14 @@ spec:
           volumeMounts:
             - name: scriptsrc
               mountPath: /usr/local/bin
+            - name: kubeletpath
+              mountPath: /var/lib/kubelet/pods
       volumes:
         - name: scriptsrc
           configMap:
             name: systemd-cgroup-gc
             defaultMode: 0755
+        - name: kubeletpath
+          hostPath:
+                  path: /var/lib/kubelet/pods
+                  type: Directory
